# Dictatr

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pyproject.toml
.github/workflows/: release.yml
docs/: BUILD-MACOS.md  BUILD-WINDOWS.md  CHANGELOG.md  RELEASE.md
docs/superpowers/plans/: 2026-04-13-dictatr-phase1-mvp.md  2026-04-13-dss-whisper-phase1-mvp.md
docs/superpowers/specs/: 2026-04-13-dictatr-dictation-design.md  2026-04-13-dss-whisper-dictation-design.md
public/: overlay.html
src/: App.tsx  index.css  ipc.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: error.rs  hotkey.rs  hotkey_ll.rs  inject.rs  lib.rs  orchestrator.rs  secrets.rs  sound.rs  state.rs
src-tauri/core/src/audio/: capture.rs  controller.rs  mod.rs  ringbuffer.rs
src-tauri/core/src/config/: mod.rs  profile.rs  provider.rs
src-tauri/core/src/history/: mod.rs
src-tauri/core/src/llm/: anthropic.rs  mod.rs  openai_compat.rs  prompt.rs
src-tauri/core/src/transcription/: llm.rs  local.rs  mod.rs  remote.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs  overlay.rs  tray.rs
src/components/: HotkeyRecorder.tsx  InfoTip.tsx  LevelMeter.tsx  UpdateBanner.tsx
src/lib/: updater.ts
src/pages/: Audio.tsx  General.tsx  History.tsx  Models.tsx  Profiles.tsx  Providers.tsx  Vocabulary.tsx
tools/: macos-clang-wrap.sh  macos-clangxx-wrap.sh  macos-cmake-wrap.sh  macos-resign.sh
