[workspace]
members = [".", "core"]
resolver = "2"

[package]
name = "dss-whisper"
version = "0.1.0"
description = "DSS-Whisper Dictation App"
authors = ["DSS-AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dss-whisper-core = { path = "core" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
