[workspace]
members = [".", "core"]
resolver = "2"

[package]
name = "dictatr"
version = "0.1.0"
description = "Dictatr Dictation App"
authors = ["DSS-AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dictatr-core = { path = "core" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
