[workspace]
members = [".", "core"]
resolver = "2"

[package]
name = "dictatr"
version = "0.1.1"
description = "Dictatr Dictation App"
authors = ["DSS-AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dictatr-core = { path = "core" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
