[package]
name = "dss-whisper-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
anyhow = "1"
keyring = "3"
cpal = "0.15"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
