[package]
name = "dictatr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
anyhow = "1"
keyring = "3"
cpal = "0.15"
parking_lot = "0.12"
global-hotkey = "0.6"
tokio = { version = "1", features = ["full"] }
enigo = "0.2"
arboard = "3"
reqwest = { version = "0.12", features = ["multipart", "json"] }
async-trait = "0.1"
bytes = "1"
hound = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
whisper-rs = { version = "0.12", default-features = false }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
